# google-workspace-cli

./: .gclient-id  .gclient-secret  CLAUDE.md  CMD_API.md  DESIGN.md  DOCUMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUES.md  PEOPLE_API.md  README.md  README_CALENDAR.md  README_DOCS.md  README_DRIVE.md  README_GMAIL.md  README_SHEETS.md  README_SLIDES.md  SHEETS_QUICK_REFERENCE.md  pyproject.toml
CLAUDE/skills/calendar/: ADVANCED.md  REFERENCE.md  SKILL.md
CLAUDE/skills/contacts/: INDEX.md  QUICK_START.md  REFERENCE.md  SKILL.md  TROUBLESHOOTING.md
CLAUDE/skills/docs/: SKILL.md
CLAUDE/skills/drive/: SKILL.md
docs/: PROJECT_STATUS.md  README_PEOPLE.md  README_PLACES.md  README_SLIDES.md  SHEETS_API_REFERENCE_COMPLETE.md  SHEETS_IMPLEMENTATION_COMPLETE.md
gwc/: __init__.py  __main__.py
gwc/calendar/: __init__.py  __main__.py  operations.py
gwc/docs/: __init__.py  __main__.py  operations.py
gwc/drive/: __init__.py  __main__.py  operations.py
gwc/email/: __init__.py  __main__.py  operations.py
gwc/people/: PLAN.md  __init__.py  __main__.py  cache.py  operations.py
gwc/shared/: __init__.py  auth.py  config.py  exceptions.py  output.py
gwc/sheets/: __init__.py  __main__.py  operations.py
gwc/slides/: __init__.py  __main__.py  operations.py
tests/: __init__.py
tests/docs/: test_integration.py
tests/drive/: test_integration.py
tests/email/: __init__.py  test_integration.py  test_operations.py
tests/sheets/: __init__.py  test_integration.py  test_operations.py
tests/slides/: __init__.py  test_integration.py  test_operations.py
(+8 files in other folders)
