[tool.poetry]
name = "google-workspace-cli"
version = "0.1.0"
description = "Command-line toolkit for Google Workspace APIs"
authors = ["Leaf <leaf@ascendant.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gwc"}]

[tool.poetry.dependencies]
python = "^3.11"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.100.0"
click = "^8.1.0"
tomli = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
gwc-cal = "gwc.calendar:main"
gwc-mail = "gwc.email:main"
gwc-drive = "gwc.drive:main"
gwc-people = "gwc.people:main"
gwc-docs = "gwc.docs:main"
gwc-sheets = "gwc.sheets:main"
gwc-slides = "gwc.slides:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
